# scisort

./: .flake8  .gitignore  CITATION.cff  README.md  folder_struct.md  pyproject.toml
.github/workflows/: python-lint.yml  python-package.yml  python-readme-adjust.yml
example/: README.md
scisort/: __init__.py  api.py  keygen.py
tests/: test_scisort.py
