[project]
name = "scisort"
description = "One downloader for many scientific data and code repositories!"
authors = [
    { name = "Jonathan de Bruin", email = "jonathandebruinos@gmail.com" }
]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
license = {text = "MIT"}
dependencies = ["natsort"]
dynamic = ["version"]
requires-python = ">=3.6"

[project.optional-dependencies]
lint = ["flake8", "flake8-import-order"]
test = ["pytest", "pandas"]

[build-system]
build-backend = 'setuptools.build_meta'
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2"]

[tool.setuptools]
packages = ["scisort"]

[tool.setuptools_scm]
write_to = "scisort/_version.py"
